# Tokenizing

./: .gitignore  CMakeLists.txt  README.md  calculator  expressions.hpp  index.html  main.cpp  parser.hpp  tokenize.cpp  tokenize.hpp
include/: calculator.hpp
src/: calculator.cpp  parser.cpp
